# sudoku_solver

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  dataset.yml
puzzles/: README.md
scripts/: benchmark.py  check_benchmark_guardrail.py
sudoku_solver/: __init__.py  __main__.py  candidates.py  cli.py  grid.py  solver.py  types.py  units.py
sudoku_solver/engines/: __init__.py  als_engine.py  chain_engine.py  fish_engine.py  uniqueness_engine.py
sudoku_solver/techniques/: README.md  __init__.py  aic.py  als_chains.py  als_xz.py  bug_plus_one.py  death_blossom.py  empty_rectangle.py  exocet.py  finned_swordfish.py  finned_x_wing.py  fireworks.py  forcing_chains.py  forcing_nets.py  franken_mutant_fish.py  grouped_aic.py  hidden_pair.py  hidden_quad.py  hidden_single.py  hidden_triple.py  jellyfish.py  kraken_fish.py  locked_candidates.py  naked_pair.py  naked_quad.py  naked_single.py  naked_triple.py  nice_loops.py  remote_pairs.py  sashimi_fish.py  simple_coloring.py  skyscraper.py  squirmbag.py  sue_de_coq.py  sue_de_coq_full.py  swordfish.py  three_d_medusa.py  two_string_kite.py  unique_rectangle.py  uniqueness_expansions.py  (+7 more)
tests/: test_advanced_regressions.py  test_benchmark_guardrail.py  test_benchmark_script.py  test_candidates.py  test_cli.py  test_grid.py  test_main_module.py  test_properties.py  test_regression_puzzles.py  test_solver.py  test_solver_internal.py
tests/engines/: __init__.py  test_als_engine.py  test_chain_engine.py  test_fish_engine.py  test_uniqueness_engine.py
(+46 files in other folders)
